2000-04-30  Jim Meyering  <meyering@lucent.com>

	* src/touch.c (O_NOCTTY): Define if not defined already.
	(touch): Add O_NOCTTY to the flags passed to open.

2000-04-29  Jim Meyering  <meyering@lucent.com>

	* Version 4.0r.

	* src/cp.c [LSTAT_FOLLOWS_SLASHED_SYMLINK] (lstat): Define to rpl_lstat.

2000-04-27  Jim Meyering  <meyering@lucent.com>

	Clean up.
	* tests/mkdir/Makefile.am (TESTS_ENVIRONMENT): Set PATH, not MKDIR.
	* tests/mkdir/p-1: Use mkdir, not $MKDIR.
	* tests/mkdir/p-2: Likewise.

	* configure.in (AC_OUTPUT): Add tests/du/Makefile.
	* tests/Makefile.am (SUBDIRS): Add du.
	* tests/du: New directory.
	* tests/du/two-args: New test.

	* tests/mkdir/special-1: New test.
	* tests/mkdir/Makefile.am (TESTS): Add special-1.

2000-04-25  Paul Eggert  <eggert@twinsun.com>

	* src/du.c (pop_dir): Remove through_symlink arg; use null cwd
	for that purpose instead.
	(count_entry): Also save the directory if we're saving more
	than one level.
	Fix file descriptor and memory leak when chdir fails.

2000-04-26  Jim Meyering  <meyering@lucent.com>

	* src/mkdir.c: Rename global: s/path_mode/create_parents/.
	(main): No longer perform explicit chmod when creating
	parent directories, since make_path now does the chmod.

2000-04-17  Jim Meyering  <meyering@lucent.com>

	* src/chown.c: New option: --from=CURRENT_OWNER:CURRENT_GROUP.
	(enum) [FROM_OPTION]: New member.
	(long_options): New getopt spec.
	(change_file_owner): Add old_user, old_group parameters.  Use them.
	(change_dir_owner): Likewise.
	(usage): Describe.
	(main): New case.
	From Andries Brouwer.
	* doc/fileutils.texi (invoking chown): Document it.

2000-04-16  Jim Meyering  <meyering@lucent.com>

	* src/cp.c: New option: --strip-trailing-slashes.
	(enum) [STRIP_TRAILING_SLASHES_OPTION]: New member.
	(remove_trailing_slashes): New global.
	(long_opts): New getopt spec.
	(usage): Describe.
	(do_copy): Strip trailing slashes on SOURCE names only if the new
	option has been specified.
	(main): New case.
